[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GALA"
version = "0.1.0"
description = "A package for spatial transcriptomics alignment with GALA"
authors = [
    { name = "Tao Ding", email = "dingtao@shanghaitech.edu.cn" }
]
readme = "README.md"
license = { text = "MIT" }  
requires-python = ">=3.8"

dependencies = [
    "anndata==0.11.4",
    "hnswlib==0.8.0",
    "matplotlib==3.10.1",
    "networkx==3.4.2",
    "numpy==2.1.3",
    "opencv-python==4.11.0.86",
    "pandas==2.2.3",
    "pygad==3.4.0",
    "scanpy==1.11.0",
    "scikit-learn==1.5.2",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "squidpy==1.6.5",
    "torch==2.6.0"
]

[tool.setuptools.packages.find]
include = ["GALA"]


[project.urls]
Homepage = "https://github.com/TaoDING2/GALA"